# image-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  image-config.cmake
cmake/: fpng-target.cmake  jpeg-turbo-target.cmake  wuffs-target.cmake
cmake/fpng/: CMakeLists.txt
cmake/wuffs/: CMakeLists.txt
image-codec/: CMakeLists.txt
image-codec/jpeg/: CMakeLists.txt
image-codec/jpeg/include/image/codec/: jpeg.h
image-codec/jpeg/include/image/codec/jpeg/: color.h  decode.h  encode.h  error.h
image-codec/jpeg/source/: encode.cc
image-codec/jpeg/test/: CMakeLists.txt
image-codec/jpeg/test/source/: decoder_test.cc  encoder_test.cc
image-codec/png/: CMakeLists.txt
image-codec/png/cmake/: generate-export-header.cmake
image-codec/png/include/image/codec/: png.h
image-codec/png/include/image/codec/png/: decode.h  error.h
image-codec/png/source/: decode.cc  encode.cc
image-codec/webp/: CMakeLists.txt
image-codec/webp/include/image/codec/webp/: color.h  decode.h  encode.h
image-codec/webp/source/: decode.cc  encode.cc
image-core/include/image/core/: buffer.h  error.h
image-io/: CMakeLists.txt
image-io/cmake/: generate-export-header.cmake
image-io/include/image/io/: encode.h
image-io/source/: decode.cc  encode.cc
include/image/: buffer.h  channel_array.h  decode.h  decoder.h  element.h  encode.h  encoder.h
include/image/capi/: buffer.h  decode.h  encode.h
include/image/capi/core/: error.h
include/image/convertor/: bitmap.h  channel_array.h  color.h  data.h  depth.h  endianness.h  sequence.h
include/image/core/: color.h  depth.h  endianness.h  error.h  format.h
include/image/processing/: blend.h  resize.h
lib/: CMakeLists.txt
lib/include/image/: image.h
module/codec/: CMakeLists.txt
module/codec/module/jpeg/cmake/: generate-export-header.cmake
module/codec/module/jpeg/include/image/codec/jpeg/: sampling.h
module/codec/module/jpeg/source/: decode.cc
module/codec/module/png/include/image/codec/png/: color.h  encode.h
module/codec/module/webp/: CMakeLists.txt
module/codec/module/webp/cmake/: generate-export-header.cmake
module/codec/module/webp/include/image/codec/: webp.h
module/codec/module/webp/include/image/codec/webp/: error.h
module/core/: CMakeLists.txt
module/core/include/image/core/: buffer.h
module/core/test/: CMakeLists.txt
module/core/test/source/: buffer_test.cc
module/io/: CMakeLists.txt
module/io/include/image/io/: decode.h  error.h  format.h
source/capi/: buffer.cc  decode.cc  encode.cc
source/decode_impl/: jpeg.cc  png.cc
source/decoder/: jpeg.cc  png.cc
source/encode_impl/: jpeg.cc  png.cc
source/encoder/: jpeg.cc  png.cc
test/: CMakeLists.txt
test/source/convertor/: bitmap_test.cc
